ey-dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: eycart-dep
  namespace: kgateway-ns
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  selector:
    matchLabels:
      app: eycart
  template:
    metadata:
      labels:
        app: eycart
    spec:
      containers:
      - name: eycart
        image: muralisocial123/ey-cart:v1.1.0
        ports:
        - containerPort: 3000
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "300m"
            memory: "256Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: eycart-svc
  namespace: kgateway-ns
spec:
  selector:
    app: eycart
  ports:
  - port: 3001
    targetPort: 3000
  type: ClusterIP
