flower-dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flower-dep
  namespace: kgateway-ns
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  selector:
    matchLabels:
      app: flower
  template:
    metadata:
      labels:
        app: flower
    spec:
      containers:
      - name: flower
        image: muralisocial123/kyndrl-flower-app:v1.1.0
        ports:
        - containerPort: 3015
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "300m"
            memory: "256Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: flower-svc
  namespace: kgateway-ns
spec:
  selector:
    app: flower
  ports:
  - port: 3015
    targetPort: 3015
  type: ClusterIP
