transaction-dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: transaction-dep
  namespace: kgateway-ns
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  selector:
    matchLabels:
      app: transaction
  template:
    metadata:
      labels:
        app: transaction
    spec:
      containers:
      - name: transaction
        image: muralisocial123/transaction-app:v1.0.0
        ports:
        - containerPort: 3000
        resources:
          requests:
            cpu: "50m"
            memory: "64Mi"
          limits:
            cpu: "200m"
            memory: "128Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: transaction-svc
  namespace: kgateway-ns
spec:
  selector:
    app: transaction
  ports:
  - port: 3000
    targetPort: 3000
  type: ClusterIP
