ggroute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: gathergenieroute
  namespace: keycloak-ns

spec:
  hostnames:
    - keycloak.gathergenie.in

  parentRefs:
    - name: kgateway
      namespace: kgateway-ns

  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /

      backendRefs:
        - name: keycloak-svc
          port: 8080
