task2.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: fitness-route
spec:
  parentRefs:
    - name: mahesh-kgateway
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /fitness
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /
      backendRefs:
        - name: fitness-tracker-service
          port: 80
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: hospital-route
spec:
  parentRefs:
    - name: mahesh-kgateway
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /hospital
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /
      backendRefs:
        - name: hospital-service
          port: 81
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: home-route
spec:
  parentRefs:
    - name: mahesh-kgateway
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /
      backendRefs:
        - name: hospital-service
          port: 80
